--- a/SailScores.Web/Views/Home/About.cshtml
+++ b/SailScores.Web/Views/Home/About.cshtml
@@ -1,26 +1,16 @@
 ﻿@{
-    ViewData["Title"] = "About";
+    ViewData["Title"] = "About SailScores";
 }
 
 
 <h3>Sailing scoring kept simple.</h3>
 <p>
-    Sailscores is built around the idea that publishing sail race
-    scores should be simple. It should be simple enough that the
+    Sailscores makes publishing sail race
+    results simple and fast. It should be simple enough that the
     scores can be entered from a phone on the water. And once they've
     got scores, competitors and clubs should be able to review scores
     in many ways, from many devices, viewing trends and specifics.
 </p>
-<br />
-<h3>Future</h3>
-Planned features include:
-<ul>
-    <li>Integration with social media, such as automatic result posting to Twitter.</li>
-    <li>Import and Export to integrate with existing scoring software.</li>
-    <li>Result trend reporting: Are your races growing?</li>
-    <li><s>Quick result entry, especially on mobile devices.</s> <b>Complete, Q1 2019</b></li>
-    <li><s>Support for overlapping series. (Races can be included in multiple series.)</s> <b>Complete, Q1 2019</b></li>
-</ul>
 <br />
 <h3>You can use it</h3>
 <p>
@@ -29,13 +19,25 @@ Planned features include:
     You are welcome to run your own instance of this on your own server(s). I'll provide
     support as time allows. <b>But even easier:</b> this site can also host your club's scores.
     Contact us at any of the email addresses below for more information. This is currently a free
-    option and we hope to keep it that way. (Sailscores.com is currently hosted on a low-cost plan at
+    option and we hope to keep it that way. (Someday we may need to update from our very lowcost
+    hosting plan at
     winhost.com.)
 </p>
 <br />
+<h3>Future</h3>
+Planned features include:
+<ul>
+    <li>Integration with social media, such as automatic posting of results to Twitter.</li>
+    <li>Import and Export to integrate with existing scoring software.</li>
+    <li>Result trend reporting: Are your races growing?</li>
+    <li>Track scheduled and cancelled races.</li>
+    <li><s>Quick result entry, especially on mobile devices.</s> <em>Complete, Q1 2019</em></li>
+    <li><s>Support for overlapping series. (Races can be included in multiple series.)</s> <em>Complete, Q1 2019</em></li>
+</ul>
+<br />
 <h3>Feedback</h3>
 <p>
-    Please send feed back! Use the email addresses below, reach out on Twitter @@SailScores or via Github. 
+    Please send feed back! Use the email addresses below, reach out on Twitter @@SailScores or via Github.
 </p>
 
 <br />
@@ -44,4 +46,3 @@ Sailscores is written and maintained by Jamie Fraser, <a href="mailto:jamie@wide
 <address>
     <a href="mailto:info@sailscores.com">info@sailscores.com</a><br />
 </address>
-</h2>
