--- a/SailScores.Web/Views/Admin/Index.cshtml
+++ b/SailScores.Web/Views/Admin/Index.cshtml
@@ -88,13 +88,14 @@
 
     </div>
 </div>
-@await Html.PartialAsync("_BoatClassList", Model.BoatClasses)
-@await Html.PartialAsync("_FleetList", Model.Fleets)
-@await Html.PartialAsync("_SeasonList", Model.Seasons)
-@await Html.PartialAsync("_SeriesList", Model.Series)
-@await Html.PartialAsync("_CompetitorList", Model.Competitors)
-@await Html.PartialAsync("_RaceList", Model.Races)
-
+<div id="accordion">
+    @await Html.PartialAsync("_BoatClassList", Model.BoatClasses)
+    @await Html.PartialAsync("_FleetList", Model.Fleets)
+    @await Html.PartialAsync("_SeasonList", Model.Seasons)
+    @await Html.PartialAsync("_SeriesList", Model.Series)
+    @await Html.PartialAsync("_CompetitorList", Model.Competitors)
+    @await Html.PartialAsync("_RaceList", Model.Races)
+</div>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
