--- a/SailScores.Web/Views/Admin/_RaceList.cshtml
+++ b/SailScores.Web/Views/Admin/_RaceList.cshtml
@@ -1,48 +1,57 @@
 ﻿@model IEnumerable<SailScores.Core.Model.Race>
-
-    <h3 id="races">Races</h3>
-    <p>
-        @Html.ActionLink("Create", "Create", "Race", new { /* id=item.PrimaryKey */ })
-    </p>
-    <table class="table table-not-wide">
-        <thead>
-            <tr>
-                <th>
-                    @Html.DisplayNameFor(model => model.Name)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Date)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Order)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Description)
-                </th>
-                <th></th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var item in Model.OrderByDescending(r => r.Date).ThenBy(r => r.Order))
-            {
-                <tr>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Name)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Date)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Order)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Description)
-                    </td>
-                    <td>
-                        @Html.ActionLink("Edit", "Edit", "Race", new { id=item.Id }) |
-                        @Html.ActionLink("Delete", "Delete", "Race", new { id=item.Id })
-                    </td>
-                </tr>
-            }
-        </tbody>
-    </table>
+<div class="card">
+    <div class="card-header" id="racesHeading">
+        <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseRaces" aria-expanded="false" aria-controls="collapseRaces">
+            <h4 id="races">Races</h4>
+        </button>
+    </div>
+    <div id="collapseRaces" class="collapse" aria-labelledby="racesHeading" data-parent="#accordion">
+        <div class="card-body">
+            <p>
+                @Html.ActionLink("Create", "Create", "Race", new { /* id=item.PrimaryKey */ })
+            </p>
+            <table class="table table-not-wide">
+                <thead>
+                    <tr>
+                        <th>
+                            @Html.DisplayNameFor(model => model.Name)
+                        </th>
+                        <th>
+                            @Html.DisplayNameFor(model => model.Date)
+                        </th>
+                        <th>
+                            @Html.DisplayNameFor(model => model.Order)
+                        </th>
+                        <th>
+                            @Html.DisplayNameFor(model => model.Description)
+                        </th>
+                        <th></th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @foreach (var item in Model.OrderByDescending(r => r.Date).ThenBy(r => r.Order))
+                    {
+                        <tr>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Name)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Date)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Order)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Description)
+                            </td>
+                            <td>
+                                @Html.ActionLink("Edit", "Edit", "Race", new { id = item.Id }) |
+                                @Html.ActionLink("Delete", "Delete", "Race", new { id = item.Id })
+                            </td>
+                        </tr>
+                    }
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
