Scoring System added to EF migration

--- a/SailScores.Web/Views/Home/About.cshtml
+++ b/SailScores.Web/Views/Home/About.cshtml
@@ -17,11 +17,9 @@
     SailScores is open-source software. The code is available at
     <a href="https://github.com/jbfraser1/SailScores">https://github.com/jbfraser1/SailScores</a>.
     You are welcome to run your own instance of this on your own server(s). I'll provide
-    support as time allows. <b>But even easier:</b> this site can also host your club's scores.
+    support as time allows. <b>But even easier:</b> this site can host your club's scores.
     Contact us at any of the email addresses below for more information. This is currently a free
-    option and we hope to keep it that way. (Someday we may need to update from our very lowcost
-    hosting plan at
-    winhost.com.)
+    option and we hope to keep it that way.
 </p>
 <br />
 <h3>Future</h3>
