Color top three in series
closes #4

--- a/SailScores.Web/custom.scss
+++ b/SailScores.Web/custom.scss
@@ -29,3 +29,13 @@ body {
     background: #fbef97;
     z-index: 2;
 }
+
+.finish-first {
+    background: #fef1ab;
+}
+.finish-second {
+    background: #dfdfdf;
+}
+.finish-third {
+    background: #f7c985;
+}
