--- a/SailScores.Web/Views/Series/Details.cshtml
+++ b/SailScores.Web/Views/Series/Details.cshtml
@@ -40,8 +40,12 @@
 
                 @foreach (var race in Model.Item.Results.Races)
                 {
+                    var result = Model.Item.Results.GetResult(comp, race);
 
-                    <td class="text-center">
+                    <td class="text-center
+                        @(result.RawScore?.Place == 1 ? "finish-first":"") 
+                        @(result.RawScore?.Place == 2 ? "finish-second":"") 
+                        @(result.RawScore?.Place == 3 ? "finish-third":"") ">
                         @if (Model.Item.Results.GetResult(comp, race).Discard)
                         {
                             @Html.Raw("<span class='text-muted'>")
