--- a/SailScores.Web/Views/Series/Details.cshtml
+++ b/SailScores.Web/Views/Series/Details.cshtml
@@ -9,7 +9,7 @@
 
 <h2>@Model.Item.Name</h2>
 @Model.Item.Races.Count Races with @Model.Item.Results.NumberOfDiscards Discards, @Model.Item.Competitors.Count Competitors
-<table class="table">
+<table class="table table-hover table-sm">
     <thead>
         <tr>
             <th scope="col">Place</th>
