--- a/SailScores.Web/custom.scss
+++ b/SailScores.Web/custom.scss
@@ -31,11 +31,11 @@ body {
 }
 
 .finish-first {
-    background: #fef1ab;
+    background: #ffe974;
 }
 .finish-second {
     background: #dfdfdf;
 }
 .finish-third {
-    background: #f7c985;
+    background: #f3cf9b;
 }
