Historical Results WIP

--- a/SailScores.Web/Views/Race/Delete.cshtml
+++ b/SailScores.Web/Views/Race/Delete.cshtml
@@ -28,6 +28,12 @@
         <dd>
             @Html.DisplayFor(model => model.Description)
         </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Series)
+        </dt>
+        <dd>
+            @(String.Join(", ", Model.Series.Select(s => s.Name)))
+        </dd>
     </dl>
     
     <form asp-action="Delete">
