--- a/SailScores.Web/Views/Series/Details.cshtml
+++ b/SailScores.Web/Views/Series/Details.cshtml
@@ -9,55 +9,57 @@
 
 <h2>@Model.Item.Name</h2>
 @Model.Item.Races.Count races with @Model.Item.Results.NumberOfDiscards discards, @Model.Item.Competitors.Count competitors
-<table class="table table-hover table-sm">
-    <thead>
-        <tr>
-            <th scope="col">Place</th>
-            <th scope="col">Sail</th>
-            <th scope="col">Helm</th>
-            <th scope="col">Boat</th>
-            <th scope="col" class="text-center">Total</th>
-            @foreach (var race in Model.Item.Results?.Races ?? Enumerable.Empty<Race>())
-            {
-                <th class="text-center">
-                    @Html.ActionLink(
-                       @race.Date?.ToString("M-d") + " R" + @race.Order
-                       , "Details", "Race", new { id = race.Id })
-                </th>
-            }
-        </tr>
-    </thead>
-    <tbody>
-
-        @foreach (var comp in Model.Item.Results?.Competitors ?? Enumerable.Empty<Competitor>())
-        {
+<div class="table-responsive-sm">
+    <table class="table table-hover table-sm">
+        <thead>
             <tr>
-                <th scope="row">@Model.Item.Results.Results[comp].Rank</th>
-                <th scope="row">@comp.SailNumber</th>
-                <th scope="row">@comp.Name</th>
-                <td>@comp.BoatName</td>
-                <td scope="row" class="text-center"><strong>@Model.Item.Results.Results[comp].TotalScore</strong></td>
-
-                @foreach (var race in Model.Item.Results.Races)
+                <th scope="col">Place</th>
+                <th scope="col">Sail</th>
+                <th scope="col">Helm</th>
+                <th scope="col">Boat</th>
+                <th scope="col" class="text-center">Total</th>
+                @foreach (var race in Model.Item.Results?.Races ?? Enumerable.Empty<Race>())
                 {
-                    var result = Model.Item.Results.GetResult(comp, race);
-                    <td class="text-center @(result.RawScore?.Place == 1 ? "finish-first":"") @(result.RawScore?.Place == 2 ? "finish-second":"") @(result.RawScore?.Place == 3 ? "finish-third":"") ">
-                        @if (Model.Item.Results.GetResult(comp, race).Discard)
-                        {
-                            @Html.Raw("<span class='text-muted'>")
-                            @Html.Raw("<s>")
-                        }
-                        @Model.Item.Results.GetResult(comp, race)
-                        @if (Model.Item.Results.GetResult(comp, race).Discard)
-                        {
-                            @Html.Raw("</s>")
-                            @Html.Raw("</span>")
-
-                        }
-                    </td>
+                    <th class="text-center">
+                        @Html.ActionLink(
+                           @race.Date?.ToString("M-d") + " R" + @race.Order
+                           , "Details", "Race", new { id = race.Id })
+                    </th>
                 }
             </tr>
-        }
+        </thead>
+        <tbody>
 
-    </tbody>
-</table>
+            @foreach (var comp in Model.Item.Results?.Competitors ?? Enumerable.Empty<Competitor>())
+            {
+                <tr>
+                    <th scope="row">@Model.Item.Results.Results[comp].Rank</th>
+                    <th scope="row">@comp.SailNumber</th>
+                    <th scope="row">@comp.Name</th>
+                    <td>@comp.BoatName</td>
+                    <td scope="row" class="text-center"><strong>@Model.Item.Results.Results[comp].TotalScore</strong></td>
+
+                    @foreach (var race in Model.Item.Results.Races)
+                    {
+                        var result = Model.Item.Results.GetResult(comp, race);
+                        <td class="text-center @(result.RawScore?.Place == 1 ? "finish-first":"") @(result.RawScore?.Place == 2 ? "finish-second":"") @(result.RawScore?.Place == 3 ? "finish-third":"") ">
+                            @if (Model.Item.Results.GetResult(comp, race).Discard)
+                            {
+                                @Html.Raw("<span class='text-muted'>")
+                                @Html.Raw("<s>")
+                            }
+                            @Model.Item.Results.GetResult(comp, race)
+                            @if (Model.Item.Results.GetResult(comp, race).Discard)
+                            {
+                                @Html.Raw("</s>")
+                                @Html.Raw("</span>")
+
+                            }
+                        </td>
+                    }
+                </tr>
+            }
+
+        </tbody>
+    </table>
+</div>
