--- a/SailScores.Web/Views/Series/Details.cshtml
+++ b/SailScores.Web/Views/Series/Details.cshtml
@@ -1,5 +1,6 @@
 ﻿@using SailScores.Web.Models.SailScores;
 @using SailScores.Core.Model;
+@using SailScores.Core.FlatModel;
 @model ClubItemViewModel<Series>
 
 @{
@@ -8,7 +9,7 @@
 }
 
 <h2>@Model.Item.Name</h2>
-@Model.Item.Races.Count races with @Model.Item.Results.NumberOfDiscards discards, @Model.Item.Competitors.Count competitors
+@Model.Item.Races.Count races with @Model.Item.FlatResults.NumberOfDiscards discards, @Model.Item.FlatResults.Competitors.Count() competitors
 <div class="table-responsive-sm">
     <table class="table table-hover table-sm">
         <thead>
@@ -18,7 +19,7 @@
                 <th scope="col">Helm</th>
                 <th scope="col">Boat</th>
                 <th scope="col" class="text-center">Total</th>
-                @foreach (var race in Model.Item.Results?.Races ?? Enumerable.Empty<Race>())
+                @foreach (var race in Model.Item.FlatResults?.Races ?? Enumerable.Empty<FlatRace>())
                 {
                     <th class="text-center">
                         @Html.ActionLink(
@@ -30,26 +31,26 @@
         </thead>
         <tbody>
 
-            @foreach (var comp in Model.Item.Results?.Competitors ?? Enumerable.Empty<Competitor>())
+            @foreach (var comp in Model.Item.FlatResults?.Competitors ?? Enumerable.Empty<FlatCompetitor>())
             {
                 <tr>
-                    <th scope="row">@Model.Item.Results.Results[comp].Rank</th>
+                    <th scope="row">@Model.Item.FlatResults.GetScore(comp).Rank</th>
                     <th scope="row">@comp.SailNumber</th>
                     <th scope="row">@comp.Name</th>
                     <td>@comp.BoatName</td>
-                    <td scope="row" class="text-center"><strong>@Model.Item.Results.Results[comp].TotalScore</strong></td>
+                    <td scope="row" class="text-center"><strong>@Model.Item.FlatResults.GetScore(comp).TotalScore</strong></td>
 
-                    @foreach (var race in Model.Item.Results.Races)
+                    @foreach (var race in Model.Item.FlatResults.Races)
                     {
-                        var result = Model.Item.Results.GetResult(comp, race);
-                        <td class="text-center @(result.RawScore?.Place == 1 ? "finish-first":"") @(result.RawScore?.Place == 2 ? "finish-second":"") @(result.RawScore?.Place == 3 ? "finish-third":"") ">
-                            @if (Model.Item.Results.GetResult(comp, race).Discard)
+                        var result = Model.Item.FlatResults.GetScore(comp, race);
+                        <td class="text-center @(result?.Place == 1 ? "finish-first":"") @(result?.Place == 2 ? "finish-second":"") @(result?.Place == 3 ? "finish-third":"") ">
+                            @if (result.Discard)
                             {
                                 @Html.Raw("<span class='text-muted'>")
                                 @Html.Raw("<s>")
                             }
-                            @Model.Item.Results.GetResult(comp, race)
-                            @if (Model.Item.Results.GetResult(comp, race).Discard)
+                            @result
+                            @if (result.Discard)
                             {
                                 @Html.Raw("</s>")
                                 @Html.Raw("</span>")
