Better Home page on back button

--- a/SailScores.Web/Views/Shared/ClubSelectorView.cshtml
+++ b/SailScores.Web/Views/Shared/ClubSelectorView.cshtml
@@ -1,8 +1,9 @@
 ﻿@using Microsoft.AspNetCore.Http
 @model SailScores.Web.Models.SailScores.ClubSelectorModel
 <select id="clubSelect" hidden asp-for="SelectedClubInitials" class="form-control"
-        onchange="var initials = this.value;
-window.location.href = '@string.Format("{0}://{1}{2}/", Context.Request.Scheme, Context.Request.Host, Url.Content("~"))' + initials;"
+        onchange="window.location.href =
+        '@string.Format("{0}://{1}{2}/", Context.Request.Scheme, Context.Request.Host, Url.Content("~"))' + this.value;"
+        autocomplete="off"
         asp-items="@(new SelectList(Model.Clubs, "Initials", "Name"))">
     <option>  ----Select a club----  </option>
     </select>
