Reset in Chrome and less case sensitive

--- a/SailScores.Web/Views/Shared/ClubSelectorView.cshtml
+++ b/SailScores.Web/Views/Shared/ClubSelectorView.cshtml
@@ -8,6 +8,7 @@
     <option>  ----Select a club----  </option>
     </select>
 <script>
+    document.getElementById("clubSelect").selectedIndex = 0;
     document.getElementById("clubSelect").removeAttribute('hidden');
 </script>
 <noscript>
